WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113953
[EFL] --minimal build fails with error: expected `;' before `return'
https://bugs.webkit.org/show_bug.cgi?id=113953
Summary
[EFL] --minimal build fails with error: expected `;' before `return'
Ed Bartosh
Reported
2013-04-04 13:22:49 PDT
/home/ed/git/wk/WebKit/Source/WebKit/efl/ewk/ewk_security_origin.cpp: In function `uint64_t ewk_security_origin_web_database_quota_get(const Ewk_Security_Origin*)': /home/ed/git/wk/WebKit/Source/WebKit/efl/ewk/ewk_security_origin.cpp:85:5: error: expected `;' before `return' /home/ed/git/wk/WebKit/Source/WebKit/efl/ewk/ewk_security_origin.cpp:87:1: error: no return statement in function returning non-void [-Werror=return-type] /home/ed/git/wk/WebKit/Source/WebKit/efl/ewk/ewk_security_origin.cpp: At global scope: /home/ed/git/wk/WebKit/Source/WebKit/efl/ewk/ewk_security_origin.cpp:89:6: warning: unused parameter `quota' [-Wunused-parameter] cc1plus: all warnings being treated as errors make[2]: *** [Source/WebKit/CMakeFiles/ewebkit.dir/efl/ewk/ewk_security_origin.cpp.o] Error 1 make[1]: *** [Source/WebKit/CMakeFiles/ewebkit.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.35 KB, patch)
2013-04-04 13:25 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2013-04-07 13:25 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ed Bartosh
Comment 1
2013-04-04 13:25:54 PDT
Created
attachment 196512
[details]
Patch
Ed Bartosh
Comment 2
2013-04-07 13:25:37 PDT
Created
attachment 196809
[details]
Patch Rebased. Please, review.
Patrick R. Gansterer
Comment 3
2013-04-07 16:40:04 PDT
Committed
r147885
: <
http://trac.webkit.org/changeset/147885
>
Gyuyoung Kim
Comment 4
2013-04-07 16:51:35 PDT
Comment on
attachment 196809
[details]
Patch Clearing r?, cq?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug