[EFL] --minimal build fails with error: expected `;' before `return' https://bugs.webkit.org/show_bug.cgi?id=113953

Unreviewed.

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-07

* ewk/ewk_security_origin.cpp:
(ewk_security_origin_web_database_quota_get): Added missing semicolon.

Canonical link: https://commits.webkit.org/132514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147885 268f45cc-cd09-0410-ab3c-d52691b4dbfc